--- a/mbanner/build.gradle
+++ b/mbanner/build.gradle
@@ -21,6 +21,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -30,16 +34,16 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     //必选，内部默认使用系统mediaplayer进行解码
-    implementation 'com.github.dueeeke.dkplayer:dkplayer-java:3.2.6'
+    api 'com.github.dueeeke.dkplayer:dkplayer-java:3.1.4'
     //可选，包含StandardVideoController的实现
-    implementation 'com.github.dueeeke.dkplayer:dkplayer-ui:3.2.6'
+    api 'com.github.dueeeke.dkplayer:dkplayer-ui:3.1.4'
     //可选，使用exoplayer进行解码（推荐）
-    implementation 'com.github.dueeeke.dkplayer:player-exo:3.2.6'
+    api 'com.github.dueeeke.dkplayer:player-exo:3.1.4'
     //可选，使用ijkplayer进行解码
-    implementation 'com.github.dueeeke.dkplayer:player-ijk:3.2.6'
+    api 'com.github.dueeeke.dkplayer:player-ijk:3.1.4'
     //可选，如需要缓存或者抖音预加载功能请引入此库
-    implementation 'com.github.dueeeke.dkplayer:videocache:3.2.6'
+    api 'com.github.dueeeke.dkplayer:videocache:3.1.4'
     //可选，如需要缓存或者抖音预加载功能请引入此库
-    implementation 'com.github.dueeeke.dkplayer:videocache:3.2.6'
-    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    api 'com.github.dueeeke.dkplayer:videocache:3.1.4'
+    api 'com.github.bumptech.glide:glide:4.9.0'
 }
